# class_recoupling

./: .gitignore  5050.ini  5050norec.ini  BOSS.csv  CMakeLists.txt  Makefile  MakefileTest  Makefile_interp  Phase_transition copy 2.ipynb  Phase_transition copy.ipynb  ThermalScatteringCrossSection.c  ThermalScatteringCrossSectionTest.c  ThermalScatteringCrossSections.h  WarmDM.csv  analyize_interps.ipynb  analyze_interps.ipynb  analyze_interps.py  ben_testing.ipynb  ben_testing2.ipynb  build.md  class_main  class_main2  cmb_testing.ipynb  cutoff.ipynb  data.csv  data2.csv  decoupling.ini  delta.ini  delta_dat.ipynb  delta_examples.ipynb  delta_examples_2 copy.ipynb  delta_examples_2.ipynb  delta_varied_testing.ipynb  explanatory.ini  free_streaming_testing.ipynb  grid_plots.py  interp_test  interp_test.c  lambdacdm.ini  main.py  (+23 more)
.cache/clangd/index/: arrays.c.1834818839ACEBE7.idx  arrays.h.9D13F1DD2C26F889.idx  background.c.66EBD297469269E3.idx  background.h.52FFDC1443336874.idx  class.c.E0B02FD89550D11C.idx  class.h.89B6DDE13D4526AB.idx  common.c.9C6BCEC426C82BB5.idx  common.h.0371CD3FD5621361.idx  dei_rkck.c.18CB3EE8F26E9425.idx  dei_rkck.h.EA610C7E6734F56B.idx  evolver_ndf15.c.A31F355999D4B82B.idx  evolver_ndf15.h.05E6113673D3945F.idx  evolver_rkck.c.A747A682BE58C76B.idx  evolver_rkck.h.51899366EFD9AB87.idx  growTable.c.0B7921641E124D95.idx  growTable.h.8C0DF7913A35F155.idx  helium.c.2D546678DD36E1AD.idx  helium.h.2FB3E94A13DBF204.idx  hermite3_interpolation_csource.h.AB0B33BFACF50A31.idx  hermite4_interpolation_csource.h.5894455816C5F801.idx  hermite6_interpolation_csource.h.0E82DDC13323D89F.idx  history.c.FE76207F2549211E.idx  history.h.BA48A06D49584A2D.idx  hydrogen.c.37C8AD07BD20147E.idx  hydrogen.h.9F0438AD3CC25AE6.idx  hyperspherical.c.A95E6F9FD66FD66F.idx  hyperspherical.h.52247307C468A18B.idx  hyrec.c.5F675B3C78785E56.idx  hyrec.h.74608733980FAD4D.idx  hyrectools.c.23DB795CD590BAE4.idx  hyrectools.h.53CC8DF271F56BBA.idx  input.c.938D1876167AAAB2.idx  input.h.3D4836D1FA36F62D.idx  lensing.c.0E9477F8C3741BE8.idx  lensing.h.02F1DB13B92EA10D.idx  nonlinear.c.A7174CF14A8A1E11.idx  nonlinear.h.537E031A36A54469.idx  output.c.CB51E1CD6D65BB8D.idx  output.h.17F1C5F76C569172.idx  parser.c.0F3FE0D104A69455.idx  (+20 more)
classy/: CMakeLists.txt  __init__.py  _classy.pyx
cluster_data_generation/: make_interps.py
data_generation/: best_fits.py  best_fits_n2.py  best_fits_n2_scipy.py  class_runs.py  class_runs_delta.py  class_runs_dense.py  class_runs_dense_n2.py  class_runs_dense_strong.py  class_runs_sd.py  class_runs_sd_n2.py  make_interps_delta.py  make_interps_delta_rate.py  make_interps_sd_n2.py  make_interps_strong.py  make_interps_strong_n2.py  run_delta_recoupling.py  run_delta_recoupling_extended.py  run_no_recoupling.py  sbatch_class_recoupling_delta  sbatch_class_recoupling_dense  sbatch_class_recoupling_dense_n2  sbatch_class_recoupling_dense_strong  sbatch_class_recoupling_sd  sbatch_class_recoupling_sd_n2  variables.py
include/: data.h  data.h.in  perturbations.h  precision_macros.h  precisions.h  thermodynamics.h
interps/: H_interp.p  best_fit_sds.npz  pk_delta_dict.p  pk_no_rec_interp.p  pks_delta_interp.p  pks_delta_interp_new.p  pks_sd_interp.p  pks_sd_interp_n2.p  resonant_rate.csv  test.csv
notebooks/: Interacting DM.ipynb  Late decoupling in CLASS.ipynb  ToyModellntegrating.nb  kinetic_recoupling.ipynb
notebooks/.ipynb_checkpoints/: Interacting DM-checkpoint.ipynb  kinetic_recoupling-checkpoint.ipynb
observation_data/: BOSS.csv  DESY1.csv  EdgesProjected.csv  HeraProjected.csv  PlanckEE.csv  PlanckPP.csv  PlanckTT.csv  PlanckTT_old.csv  observations.py
python/: plot_test_scattering_rate.py  setup.py
python/classy.egg-info/: SOURCES.txt
scattering/code/: CMakeLists.txt
scattering/code/include/thermal_scattering_rates/: Interface.h  ThermalScatteringRate.h
scattering/code/notebooks/: Untitled.ipynb
scattering/code/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
scattering/code/src/: ThermalScatteringRate.cpp  ThermalScatteringRatePy.cpp
scattering/include/thermal_scattering_rates/: Interface.h  ThermalScatteringRates.h
scattering/src/: MMS.cpp  ThermalScatteringRatePy.cpp  Tools.cpp  Tools.h
scripts/: kinetic_recoupling.py  variedrecoupling.py  warmup.py
source/: ThermalScatteringCrossSection.c  background.c  input.c  perturbations.c  thermodynamics.c
test/: test_scattering_rate.c
tools/: evolver_ndf15.c
